<?xml version="1.0"?>
<package format="2">
  <name>eip_msgs</name>
  <version>0.1.0</version>
  <description>EIP bridge messages to/from ROS messages</description>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>
  <author email="wmccormick@swri.org">Bill McCormick</author>
  <author email="andrew64ce@gmail.com">Andrew Cunningham</author>
  <author email="jzoss@swri.org">Jeremy Zoss</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
